<resources>
    <string name="app_name">Smart Health Reminder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sundar Acharya</string>
    <string name="nav_header_subtitle"><u>sundar.acharya@gmail.com</u></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Smart Health Reminder</string>
    <string name="menu_add_profile">Add another profile</string>
    <string name="menu_medicine">Add medicine</string>
    <string name="menu_doctor">Doctor appointment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="submit">Submit</string>

<!--    gender  -->
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="other">OTHER</string>
    <string name="occupation_hint">select gender</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="medicine_color">Medicine Color</string>
    <string name="daily_dose">Daily Doses</string>
    <string name="disease_name">Disease Name</string>
    <string name="remainder_time">Remainder Time</string>
    <string name="days">Days</string>

    <string name="disable">Disable</string>
    <string name="blood_cancer">Blood Cancer</string>
    <string name="diabetes">Diabetes</string>
    <string name="heart_disease">Heart Disease</string>
    <string name="abc">ABC</string>
    <string name="xys">XYZ</string>
    <string name="content_description_end_icon">calender icon</string>
    <string name="add">Add</string>
    <string name="add_medicine">Add medicine</string>
    <string name="medicine_info">Current Medications</string>
    <string name="menu_profile">Profile</string>
    <string name="add_profile">Add profile</string>
    <string name="my_profile">My Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_medicine">Update medicine</string>
    <string name="medication">Medications</string>
    <string name="appointments">Appointments</string>
    <string name="email">Email</string>
    <string name="timeDifference">Time Difference</string>
    <string name="set_as_default">set as default</string>
    <string name="channel_name">Smart Health</string>
    <string name="channel_description">Smart health reminder channel</string>
    <string name="notification_title">Medicine Time</string>
    <string name="notification_msg">It\'s time for your medicine.</string>
    <string name="medication_reminder">Medications Reminder</string>
    <string name="doctor_appointments">Doctor Appointments</string>


</resources>